# nileshvary-ai-security-engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  README.md  app.py  config.py  demo_data.py  generate_guardrails.py  generate_token.py  pyproject.toml  render.yaml  requirements.txt  start.ps1
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
admin/: __init__.py  panel.py
agents/: __init__.py  cve_watcher.py  orchestrator.py  remediator_agent.py  reporter_agent.py  scanner_agent.py  verifier_agent.py
api/: main.py  requirements.txt
artifacts/: combined_remediation_test.py  combined_scan_test.py
auth/: __init__.py  rate_limiter.py  session_manager.py  session_persistence.py  token_manager.py
components/: __init__.py  ai_assistant.py  ai_client.py  alert_feed.py  api_key_url.py  asset_table.py  finding_card.py  garak_runner.py  garak_targets.py  kpi_cards.py  network_animation.py  owasp_content.py  pipeline_diagram.py  security_score.py  threat_charts.py  voice.py
database/: __init__.py  email_notifier.py  firebase_manager.py
docs/: README.md
docs/architecture/: agent1_scanner.md  phase1_completion.md  phase2_scaffolding.md
docs/exports/: agent1_scanner_garak_pyrit.html  agent1_scanner_garak_pyrit.md  agent2_remediator_llmguard_nemo_claude.md  agent3_reporter_jinja2_claude.md  agent4_verifier_quickcheck_garakrescan.md  agent5_orchestrator_pipeline.md  agent6_cve_watcher_auto_update.md  fastapi_chromadb_bridge_vectordb.md
docs/research/: 2026-06-09_reporter_competitive_analysis.html
frontend/: package-lock.json  package.json
schemas/: finding.py
templates/: summary.html.j2
tests/: test_cli.py  test_generate_guardrails.py  test_integration.py  test_schemas_and_config.py
tools/: __init__.py  garak_runner.py  http_target.py  llmguard_runner.py  nemo_runner.py  pyrit_runner.py  vector_poisoner.py
(+73 files in other folders)
